2002-12-09  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* include/bits/slice_array.h (slice_array<>::operator=): Fix typo.

2002-12-09  Mark Mitchell  <mark@codesourcery.com>

	* libsupc++/cxxabi.h (__cxa_pure_virtual): Declare it.

2002-12-05  Benjamin Kosnik  <bkoz@redhat.com>

	* testsuite/abi_check.cc: Add GLIBCPP_3.2.2.

2002-12-02  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.h (compare(const basic_string&)):
        Fully qualify min() with std::.

2002-12-02  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.in (libtool_VERSION): Update to 5:2:0.
	* configure: Regenerate.

2002-12-02  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.tcc
	(basic_string::append(const basic_string&, size_type,
	size_type), basic_string::compare(size_type, size_type,
	const basic_string&), basic_string::compare(size_type,
	size_type, const basic_string&, size_type, size_type),
	basic_string::compare(const _CharT*), basic_string::
	compare(size_type, size_type, const _CharT*),
	basic_string::compare(size_type, size_type, const _CharT*,
	size_type), _S_string_copy(const basic_string&, _CharT*,
	typename _Alloc::size_type)): Fully qualify min() with std::.
	
2002-12-02  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/basic_string.tcc
	(basic_string::_S_construct(_InIter, _InIter, const _Alloc&,
	forward_iterator_tag)): Delay the declaration of __dnew,
	fully qualify distance() with std::.
	(basic_string::_M_replace_safe): Fully qualify distance()
	with std::.

2002-11-28  Phil Edwards  <pme@gcc.gnu.org>

	PR libstdc++/8716
	* testsuite/21_strings/ctor_copy_dtor.cc (test05):  Also test
	the NULL-pointer, zero-size case.

2002-11-28  Jonathan Wakely  <redi@gcc.gnu.org>

	* docs/html/faq/index.html: Add tip about a namespace for extensions.

2002-11-28  Paolo Carlini  <pcarlini@unitus.it>
            Nathan Myers  <ncm@cantrip.org>

	* src/localename.cc
	(locale::_Impl::_Impl(const char*, size_t)):