@@ -1,3 +1,10 @@
+2002-12-10  Mark Mitchell  <mark@codesourcery.com>
+
+	* libsupc++/cxxabi.h (__cxa_bad_cast): Declare it.
+	(__cxa_bad_typeid): Likewise.
+	(__cxa_atexit): Likewise.
+	(__cxa_finalize): Likewise.
+
 2002-12-09  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* include/bits/slice_array.h (slice_array<>::operator=): Fix typo.
